# wiki-rag-flow

./: .dockerignore  .gitignore  Makefile  README.md  config.py  docker-compose.yaml  indeks.txt  logger_config.py  pyproject.toml
.github/workflows/: ci.yml
backend/app/: main.py  schemas.py
backend/db/mongodb/: connection.py
backend/db/mongodb/schema/: init-db.js
backend/db/weaviate/: connection.py
dockerfiles/: Dockerfile_fastapi  Dockerfile_frontend  Dockerfile_parser  Dockerfile_scraper
embedding-server/: embedding_server.py
frontend/: streamlit.py
llm/: graph.py  interface.py  prompts.py  router.py  routing.py
llm_1/: interface.py  prompts.py  router.py
local_servers/: nlp_toolkit.py
nlp/: base.py  chunking.py  keywords.py  ner.py  ranking.py  spacy.py  toolkit.py  utils.py
orchestrator/: router_llm.py
parser/: base.py  entities.py  mp_workers.py
parser/nlp/: chunking.py  keywords.py  ner.py  ranking.py  spacy.py  toolkit.py  utils.py  wiki_tools.py
parser/wiki/: __main__.py  worker.py
requirements/: backend.txt  dev.txt  frontend.txt  parser.txt  scraper.txt
scrapers/: config.py
scrapers/wiki/: __main__.py  async_func.py  utils.py
tests/mongodb/: test_connection.py
